--- a/JavaScript/Rock, Paper, Scissors Bootstrap/index.html
+++ b/JavaScript/Rock, Paper, Scissors Bootstrap/index.html
@@ -11,60 +11,94 @@
       crossorigin="anonymous"
     />
   </head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <script src="./script.js" defer></script>
   <body>
     <div class="container text-center mt-5 pt-5">
       <div class="row align-items-center">
         <div class="col">
-          <button id="Rock" type="button" class="btn btn-outline-primary btn-lg">Rock</button>
+          <button
+            id="Rock"
+            type="button"
+            class="btn btn-outline-primary btn-lg"
+          >
+            Rock
+          </button>
         </div>
         <div class="col">
-          <button id="Paper" type="button" class="btn btn-outline-success btn-lg">
+          <button
+            id="Paper"
+            type="button"
+            class="btn btn-outline-success btn-lg"
+          >
             Paper
           </button>
         </div>
         <div class="col">
-          <button id="Scissors" type="button" class="btn btn-outline-danger btn-lg">Scissors</button>
+          <button
+            id="Scissors"
+            type="button"
+            class="btn btn-outline-danger btn-lg"
+          >
+            Scissors
+          </button>
         </div>
       </div>
 
       <div class="row align-items-center mt-5 pt-5">
         <div class="col">
-            <div class="input-group input-group-lg">
-                <span class="input-group-text" id="inputGroup-sizing-lg">Computer Choice</span>
-                <input id="computer-choice" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-              </div>
+          <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping"
+              >Computer Choice</span
+            >
+            <input
+              id="computer-choice"
+              type="text"
+              class="form-control"
+              placeholder="Username"
+              aria-label="Username"
+              aria-describedby="addon-wrapping"
+            />
+          </div>
         </div>
         <div class="col">
           <button id="reset" type="button" class="btn btn-outline-info">
-            Reset</button>
+            Reset
+          </button>
         </div>
         <div class="col">
-            <div class="input-group input-group-lg">
-                <span class="input-group-text" id="inputGroup-sizing-lg">Players Choice</span>
-                <input id="players-choice" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-              </div>
+          <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping"
+              >Player Choice</span
+            >
+            <input
+              id="player-choice"
+              type="text"
+              class="form-control"
+              placeholder="Username"
+              aria-label="Username"
+              aria-describedby="addon-wrapping"
+            />
+          </div>
         </div>
       </div>
       <div class="row align-items-center mt-5 pt-5">
+        <div class="col"></div>
         <div class="col">
-          
+          <div id="score" class="card" style="width: 28rem">
+            <div class="card-body">
+              <h5 class="card-title">Score</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Card subtitle
+              </h6>
+              <p id="scoretable" class="card-text"></p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
         </div>
-        <div class="col">
-            <div id="score" class="card" style="width: 28rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Score</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                </div>
-              </div>
-        </div>
-        <div class="col">
-         
-        </div>
+        <div class="col"></div>
+      </div>
     </div>
 
     <script
