am modificat html

--- a/JavaScript/Rock, Paper, Scissors Bootstrap/index.html
+++ b/JavaScript/Rock, Paper, Scissors Bootstrap/index.html
@@ -55,7 +55,6 @@
               id="computer-choice"
               type="text"
               class="form-control"
-              placeholder="Username"
               aria-label="Username"
               aria-describedby="addon-wrapping"
             />
@@ -75,7 +74,6 @@
               id="player-choice"
               type="text"
               class="form-control"
-              placeholder="Username"
               aria-label="Username"
               aria-describedby="addon-wrapping"
             />
@@ -88,12 +86,10 @@
           <div id="score" class="card" style="width: 28rem">
             <div class="card-body">
               <h5 class="card-title">Score</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">
-                Card subtitle
-              </h6>
-              <p id="scoretable" class="card-text"></p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <h6 class="card-subtitle mb-2 text-body-secondary"></h6>
+              <h2 id="scoretable" class="card-text"></h2>
+              <a id="pc" href="#" class="card-link"></a>
+              <a id="user" href="#" class="card-link"></a>
             </div>
           </div>
         </div>
