--- a/JavaScript/Tema DOM Manipulation- Contact Form - Google Docs/index.html
+++ b/JavaScript/Tema DOM Manipulation- Contact Form - Google Docs/index.html
@@ -12,7 +12,6 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    
     <div class="banner" id="banner">
       <div class="bannercontent">
         <span class="material-icons"> check_circle </span>
@@ -57,7 +56,7 @@ Your message here....</textarea
         <br />
       </div>
       <div>
-        <input type="submit" value="Submit" class="button" id="submit" />
+        <input type="button" value="Submit" class="button" id="submit" />
       </div>
       <div class="image">
         <img src="https://dummyimage.com/300x380" alt="Dummy Image" />
